# openAI_project

./: README.md  __init__.py  environment.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  types.py
config/: base_config.yaml  env_config.yaml
core/: trainer.py
data/: proceass_rollouts.py
notebooks/: prototype.ipynb
observation/state/: client.py
reults/: logger.py
server/: Dockerfile  app.py  environment.py  my_environment.py  types.py
src/agents/: __init__.py  simple_agent.py
src/envs/: __init__.py  custom_env.py  utils.py
src/training/: __init__.py  logging.py  trainer.py
src/utils/: __init__.py  helper.py  helpers.py  logger.py  validators.py
tests/: test_agent.py  test_env.py
